--- a/week-07/day-3/src/main/resources/templates/greeting.html
+++ b/week-07/day-3/src/main/resources/templates/greeting.html
@@ -5,6 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     </head>
     <body>
-        <p th:text="${greeting} + ', ' + ${name} + '! This site was loaded ' + ${id} + ' times since last server start.'"/>
+        <div th:style="'color:' + ${rgb}">
+            <div th:style="'font-size:' + ${size} + 'px'">
+                <p th:text="${greeting} + ', ' + ${name} + '! This site was loaded ' + ${id} + ' times since last server start.'"/>
+            </div>
+        </div>
     </body>
 </html>
