--- a/week-07/day-4/02_LoginForm/styles.css
+++ b/week-07/day-4/02_LoginForm/styles.css
@@ -6,13 +6,14 @@ body {
 .box {
     background-color: white;
     margin: 50px auto;
-    padding: 25px 60px;
+    padding: 25px 60px 40px;
     width: 25%;
+    border-radius: 10px;
 }
 
 h1 {
     font-weight: normal;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 .logininfo, h1 {
@@ -20,15 +21,15 @@ h1 {
     text-align: left;
 }
 
+label {
+    font-size: 16px;
+}
+
 input {
     width: 100%;
     margin: 10px 0px;
     height: 40px;
     text-align: center;
-
-}
-
-label, input {
     font-size: 16px;
 }
 
