--- a/week-07/day-4/04_SignUpForm/styles.css
+++ b/week-07/day-4/04_SignUpForm/styles.css
@@ -81,6 +81,10 @@ input,
     border-radius: 100%;
 }
 
+.or > p {
+    margin-top: 13px;
+}
+
 button {
     color: white;
     background-color: green;
