--- a/week-07/day-5/src/main/resources/static/styles.css
+++ b/week-07/day-5/src/main/resources/static/styles.css
@@ -1,32 +1,98 @@
-* {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;
+body {
+  padding: 30px 20%;
+  font-family: -apple-system, Cambria, "Times New Roman";
+}
+
+.container {
+  width: fit-content;
+}
+
+.header {
+  margin: 0px 5px;
+  color: rgb(31,188,210);
+  border-bottom: 3px solid rgb(31,188,210);
 }
 
 h1 {
-    color: rgb(58, 197, 197);
-    font-size: 50px;
-    width: 100%;
-    margin: 30px 5% 5px 5%;
+  margin: 0px;
+  font-size: 40px;
 }
 
-.headerline {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 5px solid rgb(58, 197, 197);
-    margin: 0px 5% 30px 5%;
-    padding: 0;
+button[type="navbar"] {
+  padding: 3px 8px;
+  margin: 20px 5px;
+  background-color: rgb(241,69,61);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  display: inline-block;
+  cursor: pointer;
 }
 
-.links {
-    
+button:focus {
+  outline: none;
 }
 
-.links > a {
-    background-color: red;
-    margin: 10px 8%;
-    color: white;
-    text-decoration: none;
-    border-radius: 4px;
-    padding: 5px 15px;
+button:hover {
+  opacity: 0.8;
+}
+
+.searchbar {
+  margin: 15px 5px;
+}
+
+.searchbar > p {
+  color: rgb(241,69,61);
+  font-size: 20px;
+  display: block;
+}
+
+input {
+  display: inline-block;
+  width: 83%;
+  padding: 10px;
+  margin: 0px;
+  border: 2px solid rgb(241,69,61);
+  border-radius: 5px;
+  color: gray;
+}
+
+input:focus {
+  outline: none;
+}
+
+button[type="search"] {
+  float: right;
+  padding: 6px;
+  background-color: rgb(241,69,61);
+  font-size: 25px;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  display: inline-block;
+  cursor: pointer;
+}
+
+table {
+  margin: 10px 5px;
+  width: 100%;
+}
+
+thead {
+  background-color: rgb(105,239,254);
+  border-collapse: collapse;
+}
+
+th {
+  font-size: 20px;
+  padding: 25px 10px;
+}
+
+td {
+  background-color: white;
+  padding: 15px 10px;
+}
+
+.itemprice, .itemquantity {
+  text-align: center;
 }
