W07D5 Webshop: Add OnlyAvailable and CheapestFirst

--- a/week-07/day-5/src/main/resources/static/styles.css
+++ b/week-07/day-5/src/main/resources/static/styles.css
@@ -18,7 +18,8 @@ h1 {
   font-size: 40px;
 }
 
-button[type="navbar"] {
+.navbar > a {
+  text-decoration: none;
   padding: 3px 8px;
   margin: 20px 5px;
   background-color: rgb(241,69,61);
