--- a/week-07/day-5/src/main/resources/templates/average-stock.html
+++ b/week-07/day-5/src/main/resources/templates/average-stock.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1>My Shop</h1>
+        <h1><a href="/">My Shop</a></h1>
     </div>
     <div class="navbar">
         <a href="/only-available">ONLY AVAILABLE</a>
@@ -22,23 +22,8 @@
         <input type="text" placeholder="...something like nike">
         <button type="search">Search</button>
     </div>
-    <div class="table">
-        <table>
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Price</th>
-                <th>Quantity of stock</th>
-            </tr>
-            <tr th:each="item : ${items}">
-                <td class="itemname" th:text="${item.getName()}"></td>
-                <td class="itemdescription" th:text="${item.getDescription()}"></td>
-                <td class="itemprice" th:text="${item.getPrice()} + ' Kč'"></td>
-                <td class="itemquantity" th:text="${item.getQuantityOfStock()}"></td>
-            </tr>
-            </thead>
-        </table>
+    <div class="average-stock">
+        <p th:text="${average-stock}"></p>
     </div>
 </div>
 </body>
