--- a/week-07/day-5/src/main/resources/templates/webshop.html
+++ b/week-07/day-5/src/main/resources/templates/webshop.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1>My Shop</h1>
+        <h1><a href="/">My Shop</a></h1>
     </div>
     <div class="navbar">
         <a href="/only-available">ONLY AVAILABLE</a>
