W07D5 Webshop: Add AverageStock

--- a/week-07/day-5/src/main/resources/templates/average-stock.html
+++ b/week-07/day-5/src/main/resources/templates/average-stock.html
@@ -23,7 +23,7 @@
         <button type="search">Search</button>
     </div>
     <div class="average-stock">
-        <p th:text="${average-stock}"></p>
+        <p th:text="'Average stock: '+ ${averagestock}"></p>
     </div>
 </div>
 </body>
