W08D4 Dependancy Injection Add email validation and Caesar encoder

--- a/week-08/day-4/dependencyinjection/src/main/resources/templates/useful.html
+++ b/week-08/day-4/dependencyinjection/src/main/resources/templates/useful.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/colored">Colored</a>
-<a href="/email">Email validator</a>
-<a href="/caesar">Caesar encoder/decoder</a>
+<a href="/useful/colored">Colored</a>
+<a href="/useful/email">Email validator</a>
+<a href="/useful/caesar">Caesar encoder/decoder</a>
 
 </body>
 </html>
