W08D4 Dependancy Injection: Update .html files

--- a/week-08/day-4/dependencyinjection/src/main/resources/templates/caesar.html
+++ b/week-08/day-4/dependencyinjection/src/main/resources/templates/caesar.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
+<header th:replace="useful :: header"></header>
 <p th:text="${text}"></p>
 
 </body>
