--- a/week-08/day-4/dependencyinjection/src/main/resources/templates/colored.html
+++ b/week-08/day-4/dependencyinjection/src/main/resources/templates/colored.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
 </head>
 <body th:style="|background-color: ${color}|">
+<header th:replace="useful :: header"></header>
 
 </body>
 </html>
