--- a/week-08/day-4/dependencyinjection/src/main/resources/templates/validemail.html
+++ b/week-08/day-4/dependencyinjection/src/main/resources/templates/validemail.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
+<header th:replace="useful :: header"></header>
 <p th:style="|background-color: ${color}|" th:text="${text}"></p>
 
 </body>
