--- a/week-08/day-5/src/main/resources/static/css/styles.css
+++ b/week-08/day-5/src/main/resources/static/css/styles.css
@@ -1,3 +1,22 @@
 * {
-    background-color: darkgray;
+    font-family: Cambria;
+    padding: 0;
+    margin: 0;
+    font-size: 1rem;
+    text-decoration: none;
+    color: black;
+
+}
+
+body {
+    background-color: lightgray;
+}
+
+header {
+    padding: 10px 10px;
+}
+
+img {
+    border: 5px solid black;
+    border-radius: 10px;
 }
