--- a/week-08/day-5/src/main/resources/templates/nutrition-store.html
+++ b/week-08/day-5/src/main/resources/templates/nutrition-store.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Nutrition Store</title>
+    <title>Programmer Fox Club</title>
     <link rel="stylesheet" th:href="@{css/styles.css}"/>
 </head>
 <body>
 <header th:replace="base :: header"></header>
 <div>
-    <h1 th:text="|Welcome to ${fox.name}'s Nutrition Store!|"></h1>
+    <h2 th:text="|Welcome to ${fox.name}'s Nutrition Store!|"></h2>
 </div>
 <div>
     <form method="post" action="#" th:action="@{/nutritionStore}" th:object="${fox}">
@@ -25,10 +25,11 @@
             </select>
         </div>
         <div>
-            <input type="submit" value="SUBMIT">
+            <input type="submit" value="Change diet">
             <input type="hidden" name="name" th:value="*{name}">
         </div>
     </form>
 </div>
+<footer th:replace="base :: footer"></footer>
 </body>
 </html>
