--- a/week-08/day-5/src/main/resources/templates/base.html
+++ b/week-08/day-5/src/main/resources/templates/base.html
@@ -15,6 +15,7 @@
 </header>
 
 <footer th:fragment="footer">
+    <div class="whiteline"></div>
     <p>&#9400; 2018 Mihály Barczi</p>
 </footer>
 </body>
