--- a/week-08/day-5/src/main/resources/static/css/styles.css
+++ b/week-08/day-5/src/main/resources/static/css/styles.css
@@ -10,7 +10,9 @@
 }
 
 body {
-    background-color: lightgray;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-image: linear-gradient(#a8d6a8, #928fc0);
 }
 
 header {
@@ -36,15 +38,24 @@ img {
 }
 
 main p {
-    margin: 3px 0px;
+    margin: 10px 0px;
 }
 
 main h2 {
-    margin: 15px 0px 3px;
+    margin: 30px 0px 3px;
+}
+
+.tricks li {
+    margin: 15px 0px;
 }
 
 footer {
-    margin: 30px;
+    position: fixed;
+    left: 0;
+    bottom: 30px;
+    text-align: center;
+    margin: auto;
+    width: 100%;
 }
 
 select {
