--- a/week-08/day-5/src/main/resources/templates/login.html
+++ b/week-08/day-5/src/main/resources/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Login</title>
+    <link rel="stylesheet" th:href="@{css/styles.css}"/>
 </head>
 <body>
 <div>
