--- a/week-09/day-1/sqldemo/src/main/resources/templates/index.html
+++ b/week-09/day-1/sqldemo/src/main/resources/templates/index.html
@@ -11,6 +11,13 @@
 <div class="container">
     <div th:replace="base :: template"></div>
     <h1 style="text-transform: uppercase; text-align: center">Todos for today:</h1>
+    <div style="margin: 0 0 20px">
+        <form action="/search" method="get">
+            <label for="search">Search:</label><br>
+            <input id="search" type="text" name="searchTodo">
+            <button>Search!</button>
+        </form>
+    </div>
     <table class="table table-hover">
         <thead style="text-transform: uppercase; font-weight: bold">
         <tr>
