--- a/week-09/day-1/sqldemo/src/main/resources/templates/base.html
+++ b/week-09/day-1/sqldemo/src/main/resources/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>H2 Database testing</title>
+    <title>My ToDo App</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -19,7 +19,13 @@
                 <a class="nav-link" href="/?isActive=true">Show active tasks</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/assignees">Show members</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/addtodo">Add new task</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/assignees/addmember">Add new member</a>
             </li>
         </ul>
     </div>
