--- a/week-09/day-1/sqldemo/src/main/resources/templates/index.html
+++ b/week-09/day-1/sqldemo/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>H2 Database testing</title>
+    <title>My ToDo App</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -15,14 +15,16 @@
         <form action="/search" method="get">
             <label for="search">Search:</label><br>
             <input id="search" type="text" name="searchTodo">
-            <button>Search!</button>
+            <button>Find tasks</button>
         </form>
     </div>
     <table class="table table-hover">
         <thead style="text-transform: uppercase; font-weight: bold">
         <tr>
             <td scope="col">Id</td>
+            <td scope="col">Last Updated</td>
             <td scope="col">Action</td>
+            <td scope="col">Assignee</td>
             <td scope="col">Done</td>
             <td scope="col">Urgent</td>
             <td scope="col"></td>
@@ -33,7 +35,9 @@
         <th:block th:each="todo : ${listOfTodos}">
             <tr>
                 <td class="align-middle" th:text="${todo.getId()}"></td>
+                <td class="align-middle" th:text="${todo.getCreationDate()}"></td>
                 <td class="align-middle" th:text="${todo.getTitle()}"></td>
+                <td class="align-middle" th:text="${todo.getAssignee().getName()}"></td>
                 <td class="align-middle" th:if="${todo.isDone()}">
                     <i class="material-icons">check_circle</i>
                 </td>
