--- a/week-09/day-1/sqldemo/src/main/resources/templates/assignees.html
+++ b/week-09/day-1/sqldemo/src/main/resources/templates/assignees.html
@@ -14,21 +14,13 @@
 <body>
 <div class="container">
     <div th:replace="base :: template"></div>
-    <h1 style="text-transform: uppercase; text-align: center">Todos for today:</h1>
-    <div style="margin: 0 0 20px">
-        <form action="/assignees/search" method="get">
-            <label for="search">Search:</label><br>
-            <input id="search" type="text" name="searchTodo">
-            <button>Search!</button>
-        </form>
-    </div>
+    <h1 style="text-transform: uppercase; text-align: center; margin: 0 0 20px">Members:</h1>
     <table class="table table-hover">
         <thead style="text-transform: uppercase; font-weight: bold">
         <tr>
             <td scope="col">Id</td>
             <td scope="col">Name</td>
             <td scope="col">Email address</td>
-            <td scope="col"></td>
             <td scope="col"></td>
         </tr>
         </thead>
@@ -42,11 +34,6 @@
                 <td>
                     <form th:action="@{/assignees/{id}/edit(id=*{person.id})}" method="get">
                         <button type="submit" class="btn btn-primary">edit</button>
-                    </form>
-                </td>
-                <td>
-                    <form th:action="@{/assignees/{id}/delete(id=*{person.id})}" method="post">
-                        <button type="submit" class="btn btn-danger">delete</button>
                     </form>
                 </td>
             </tr>
