--- a/week-09/day-4/src/main/resources/static/styles.css
+++ b/week-09/day-4/src/main/resources/static/styles.css
@@ -60,12 +60,20 @@ body {
     background-color: rgb(250, 250, 250);
 }
 
+.post h1 {
+    font-size: 20px;
+}
+
 .postbuttons {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-left: 5px;
     padding-right: 20px;
+}
+
+.posttext span {
+    margin: 20px 0px;
 }
 
 .info {
