--- a/week-09/day-4/src/main/resources/static/css/styles.css
+++ b/week-09/day-4/src/main/resources/static/css/styles.css
@@ -64,6 +64,10 @@ body {
     font-size: 20px;
 }
 
+.post a {
+    text-decoration: none;
+}
+
 .postbuttons {
     display: flex;
     flex-direction: column;
