C# Practice: Add Web Greet Counter method to ASP.NET intro app

--- a/mypractice-C#/AspDotNetIntroApp/AspDotNetIntroApp/Views/Web/Greeting.cshtml
+++ b/mypractice-C#/AspDotNetIntroApp/AspDotNetIntroApp/Views/Web/Greeting.cshtml
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p>
-        Hello @Model.Content
+        Hello, @Model.Content! This site was loaded @Model.Id times since last server start.
     </p>
 </body>
 </html>
