W10D03 P2P: fml (and this exercise)

--- a/week-10/day-3/src/main/resources/templates/index.html
+++ b/week-10/day-3/src/main/resources/templates/index.html
@@ -9,9 +9,9 @@
 <body>
 <div class="container">
     <h1>Peer to Peer Chat program</h1>
-    <form>
+    <form class="updateuser" th:object="${user}" th:method="p" method="post" action="/update-user">
         <label for="name">Your username:</label>
-        <input id="name" type="text">
+        <input id="name" type="text" name="name" th:value="*{name}">
         <button type="submit">Update</button>
     </form>
 
