--- a/JS-TS/AngularStart/src/app/heroes/heroes.component.html
+++ b/JS-TS/AngularStart/src/app/heroes/heroes.component.html
@@ -1,3 +1,9 @@
-<p>
-  {{ hero }}
-</p>
+<h2>{{hero.name | uppercase}} Details</h2>
+<div><span>id: </span>{{hero.id}}</div>
+<div><span>name: </span>{{hero.name}}</div>
+
+<div>
+  <label>edited name:
+    <input [(ngModel)]="hero.name" placeholder="name">
+  </label>
+</div>
