Add Ch4 of TourOfHeroes AngularStart tutorial

--- a/JS-TS/AngularStart/src/app/app.component.html
+++ b/JS-TS/AngularStart/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1>{{title}}</h1>
+<h2>Welcome to my first Angular app!</h2>
 <app-heroes></app-heroes>
+<app-messages></app-messages>
 
 <router-outlet></router-outlet>
