--- a/JS-TS/AngularStart/src/app/app.component.html
+++ b/JS-TS/AngularStart/src/app/app.component.html
@@ -1,6 +1,11 @@
 <h1>{{title}}</h1>
 <h2>Welcome to my first Angular app!</h2>
-<app-heroes></app-heroes>
+<nav>
+    <a routerLink="/">Dashboard</a>
+</nav>
+<nav>
+    <a routerLink="/heroes">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
 
-<router-outlet></router-outlet>
